# claude-launcher

./: .gitignore  .prettierignore  .prettierrc.json  BUILD_INSTRUCTIONS.md  CLAUDE.md  IMPROVEMENT_PLAN.md  LEARNINGS.md  README.md  Specs.md  TESTING.md  TEST_FIXES_SUMMARY.md  Tauri.md  WSL_INTEGRATION.md  agent-spec-tauri-windows-wsl-specialist.txt  build-release.sh  build-tauri.sh  build-windows.bat  check-resources.bat  claude-launcher.bat  debug-launcher-verbose.bat  debug-launcher.bat  eslint.config.js  package-lock.json  package.json  run-dev.bat  run-windows.ps1  test-batch-solution.bat  test-results.json  test-results.xml  test-wsl-command.bat  vite.config.js  vitest.config.js  wdio.conf.js
.claude/agents/: pyside-ui-architect.md
.github/workflows/: test.yml
docs/guides/: Specs.md  WSL_INTEGRATION.md
docs/internal/ai_workflows/: README.md  (+2 more)
docs/root_cleanup_archive_20260307/: README.md
src/: App.css  App.jsx  App.search.test.jsx  App.test.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lib_memory.rs  lib_with_python.rs  main.rs
src/components/: ColorPicker.jsx  ContextMenu.jsx  CustomIconUpload.jsx  CustomIconUpload.test.jsx  ErrorBoundary.jsx  GroupManager.jsx  GroupSection.jsx  IconPicker.jsx  IconRenderer.jsx  IconRenderer.test.jsx  ProjectCard.jsx  ProjectCard.test.jsx  ProjectGrid.jsx  ProjectGrid.test.jsx  SettingsDialog.jsx  SettingsDialog.test.jsx
src/test/: react.test.jsx  setup.js  setup.js.backup  testUtils.jsx
src/utils/: iconMapping.js  iconMapping.test.js
(+7 files in other folders)
